--- a/erp-web/package.json
+++ b/erp-web/package.json
@@ -21,7 +21,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.0",
     "lucide-react": "^0.294.0",
-    "next": "14.0.0",
+    "next": "^14.2.35",
     "postcss": "^8",
     "react": "^18",
     "react-dom": "^18",
